Chatdraw first steps, sort of working

--- a/index.css
+++ b/index.css
@@ -394,6 +394,10 @@ ruby { white-space: normal; }
 }
 #discussions {
    overflow-anchor: none;
+   overflow-y: scroll;
+}
+#oldsbschatdraw {
+   position: relative;
 }
 [data-template="messageframe"] {
    padding: 0.3em 0;
